Tests/ShouldFail/try11.adl
CONTEXT Test

PATTERN Test11
r :: A*A
r :: B*C
RULE r = r[A*A]\/I
ENDPATTERN

ENDCONTEXT

{-
   Purpose: a superficial check on type deduction
   Result: FAIL
   Reason: The type of I cannot be determined from its context
   Note that it can be determined for RULE r = r[A*A]/\I

   Message:
   The pattern named "Test11" in file try11.adl contains errors:
   line 6:18, file "try11.adl":
       Cannot deduce a type for  I.
-}